added a second card in portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -260,8 +260,9 @@ div .dot {
   background-position: center;
 
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly ;
   height: 100vh;
 }
 
