--- a/css/style.css
+++ b/css/style.css
@@ -134,12 +134,12 @@ html {
 }
 
 .portfolio {
-  background: rgb(0,212,255);
+  background: rgb(255, 0, 0);
 
   /* gradient background*/
-  background: linear-gradient(45deg, rgba(0,212,255,1) 0%, rgba(11,3,45,1) 100%);
+  background: linear-gradient(45deg, rgb(241, 30, 30) 0%, rgb(62, 4, 4) 100%);
 
-  background-image: url(../img/silver-waves.avif);
+  background-image: url(../img/red-smoke.avif);
 
   background-size: cover;
   background-position: center;
@@ -154,7 +154,7 @@ html {
 .container {
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(17, 25, 40, 0.25);
+  background-color: rgba(40, 17, 17, 0.25);
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
   padding: 38px;
@@ -170,7 +170,10 @@ html {
 .wrapper-portfolio {
   width: 100%;
   height: 100%;
+}
 
+.wrapper-portfolio h1, p {
+  color: white;
 }
 
 .banner-image {
@@ -217,7 +220,7 @@ html {
 }
 
 .fill {
-  background: rgba(229, 246, 250, 0.9);
+  background: rgba(250, 229, 229, 0.9);
   color: rgba(31, 31, 31, 0.95);
   filter: drop-shadow(0);
   font-weight: bold;
