--- a/css/style.css
+++ b/css/style.css
@@ -214,3 +214,24 @@ html {
   filter: drop-shadow(0 10px 5px rgba(0,0,0,0.125));
   transition: all .3s ease;
 }
+
+.popup {
+  width: 400px;
+  background: #fff;
+  border-radius: 6px;
+  position: absolute;
+  top: auto;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #333;
+  display: none;
+  transition: transform 0.4s, top 0,4s;
+}
+
+.open-popup {
+  display: block;
+  top: 150%;
+  transform: translate(-50%, -50%) scale(1);
+}
