--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ html {
 
   background-size: cover;
   background-position: center;
-  display: flex;
+  display: grid;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
@@ -156,13 +156,13 @@ html {
   color: white;
 }
 
-.banner-image {
-  background-image: url(https://images.pexels.com/photos/4439444/pexels-photo-4439444.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+.banner-esports {
+  background-image: url(/img/esportshub-img.JPG);
   background-position: center;
-  background-size: cover;
-  height: 300px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 245px;
   width: 100%;
-  border-radius: 12px;
   border: 1px solid rgba(255,255,255, 0.255)
 }
 
@@ -216,22 +216,26 @@ html {
 }
 
 .popup {
+  z-index: 1000;
   width: 400px;
+  height: 400px;
   background: #fff;
   border-radius: 6px;
   position: absolute;
-  top: auto;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.1);
   text-align: center;
   padding: 0 30px 30px;
   color: #333;
-  display: none;
-  transition: transform 0.4s, top 0,4s;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.4s, transform 0.4s, top 0.4s;
 }
 
 .open-popup {
-  display: block;
+  opacity: 1;
+  visibility: visible;
   top: 150%;
   transform: translate(-50%, -50%) scale(1);
 }
