added demo presentation video for esports hub

--- a/css/style.css
+++ b/css/style.css
@@ -124,8 +124,6 @@ html {
 }
 
 .portfolio {
-  background: linear-gradient(45deg, rgb(241, 30, 30) 0%, rgb(62, 4, 4) 100%);
-
   background-image: url(../img/red-smoke.avif);
 
   background-size: cover;
@@ -216,9 +214,9 @@ html {
 
 .popup {
   z-index: 1000;
-  width: 400px;
-  height: 400px;
-  background: #fff;
+  width: 410px;
+  height: 410px;
+  background-color: rgba(255, 255, 255, 0.9);
   border-radius: 6px;
   position: absolute;
   top: 50%;
@@ -230,6 +228,37 @@ html {
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.4s, transform 0.4s, top 0.4s;
+}
+
+.popup h2 {
+  margin-top: 10px;
+}
+
+.popup h5 {
+  margin-top: 20px;
+}
+
+.popup video {
+  margin-top: -30px;
+}
+
+.popup button {
+  width: 75%;
+  margin-top: 5px;
+  padding: 10px 0;
+  background-color: #ff8b8b;
+  border: 0;
+  outline: none;
+  font-size: 18px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.popup button:hover{
+  transform: scale(1.125);
+  border-color: rgba(255, 255, 255, 0.9);
+  transition: all .3s ease;
 }
 
 .open-popup {
