--- a/css/queries.css
+++ b/css/queries.css
@@ -16,10 +16,6 @@
     padding-top: 25px;
   }
 
-  .navbar a {
-    display: none;
-  }
-
   .home-image {
     width: 325px;
     height: 325px;
@@ -31,6 +27,54 @@
 
   .home-content {
     text-align: center;
+  }
+
+  .btn-mobile-nav {
+    display: block;
+    z-index: 1000;
+  }
+
+  .navbar {
+    background-color: rgba(200, 200, 200, 0.95);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s ease-in;
+
+    flex-direction: column;
+    gap: 4.8rem;
+
+    /* display: none; */
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
+
+  .nav-open .navbar {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .navbar a:link,
+  .navbar a:visited {
+    font-size: 2.5rem;
+  }
+
+  .nav-open .bx.bx-x-circle {
+    display: block;
+  }
+
+  .nav-open .bx.bx-menu {
+    display: none;
   }
 }
 
