added second project

--- a/css/queries.css
+++ b/css/queries.css
@@ -29,6 +29,12 @@
     text-align: center;
   }
 
+  .portfolio {
+    padding-top: 50px;
+    display: grid;
+    gap: 20px;
+  }
+
   .btn-mobile-nav {
     display: block;
     z-index: 1000;
