--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body {
 }
 
 .home {
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(-45deg, #363636 55%, #8f9090, #fff 95%);
   display: flex;
   justify-content: space-between;
@@ -160,11 +160,11 @@ body {
 
   background-size: cover;
   background-position: center;
-  display: grid;
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container {
