changed portfolio background image to ferris wheel

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,8 @@ body {
 }
 
 .portfolio {
-  background-image: url(../img/red-smoke.avif);
+  background-image: url(../img/ferris-wheel-black.avif);
+
 
   background-size: cover;
   background-position: center;
