improved quality of background image (portfolio)

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ body {
 }
 
 .portfolio {
-  background-image: url(../img/ferris-wheel-black.avif);
+  background-image: url(../img/black-ferris-wheel.jpg);
 
 
   background-size: cover;
